--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">El Tesoro del Mar</string>
     <string name="action_settings">Settings</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="forward">↑</string>
+    <string name="left">←</string>
+    <string name="right">→</string>
+	<string name="back">↓</string>
 </resources>
